build: create the structure of the header
The header consists of a nav logo and menu. These
link to the different sections of the website.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
     <link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
-    
+    <!-- Header -->
+    <header class="header" id="header">
+        <nav>
+            <a href="#" class="nav-logo">
+                Reshawn<span>&#46;</span>
+            </a>
+            <div class="nav-menu" id="navMenu">
+                <ul>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#skills">SKILLS</a></li>
+                    <li><a href="#projects">PROJECTS</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
