feat: allow the user to open and close toggle menu

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                 Reshawn<span>&#46;</span>
             </a>
             <div class="nav-menu" id="navMenu">
+                <!-- close toggle menu icon -->
+                <i class="fa-sharp fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="#home">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
@@ -34,6 +36,8 @@
                     <li><a href="#projects">PROJECTS</a></li>
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
+                <!-- open toggle menu icon -->
+                <i class="fa-sharp fa-solid fa-bars" onclick="showMenu()"></i>
             </div>
         </nav>
     </header>
