build: create the structure of the home page
Components:
- name header
- role header
- description
- contact link button
- resume link button
- responsive image

--- a/index.html
+++ b/index.html
@@ -41,5 +41,25 @@
             </div>
         </nav>
     </header>
+
+    <!-- Home -->
+    <section class="home" id="home">
+        <div class="container">
+            <div class="left-container">
+                <h6 class="name-tag">&#8212; Reshawn Lofters</h6>
+                <h1 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h1>
+                <h2 class="role-heading">I am a Software Developer</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
+                </p>
+                <div>
+                    <button class="contact-me-button">CONTACT ME</button>
+                    <button class="resume-button">RESUME <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                </div>
+            </div>
+            <img src="images/astronaut-riding-on-rocket.png" alt="astronaut-riding-on-rocket">
+        </div>
+    </section>
 </body>
 </html>
