build: create the structure of the about page
Components:
- responsive image
- section title
- description
- button that links to linkedin profile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/footer.css">
 </head>
-<body>
+</body>
     <!-- Header -->
     <header class="header" id="header">
         <nav>
@@ -36,16 +36,16 @@
                     <li><a href="#projects">PROJECTS</a></li>
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
-                <!-- open toggle menu icon -->
-                <i class="fa-sharp fa-solid fa-bars" onclick="showMenu()"></i>
             </div>
+            <!-- open toggle menu icon -->
+            <i class="fa-sharp fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
     </header>
 
     <!-- Home -->
     <section class="home" id="home">
         <div class="container">
-            <div class="left-container">
+            <div>
                 <h6 class="name-tag">&#8212; Reshawn Lofters</h6>
                 <h1 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h1>
                 <h2 class="role-heading">I am a Software Developer</h2>
@@ -59,6 +59,25 @@
                 </div>
             </div>
             <img src="images/astronaut-riding-on-rocket.png" alt="astronaut-riding-on-rocket">
+        </div>
+    </section>
+
+    <!-- About -->
+    <section class="about" id="about">
+        <div class="container">
+            <img src="images/astronaut-riding-on-rocket.png" alt="astronaut-riding-on-rocket">
+            <div>
+                <h1 class="section-title">About Me</h1>
+                <hr/>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
+                    Eligendi quam dolore repellendus ipsam.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
+                </p>
+                <button class="linkedin-button">LINKEDIN <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+            </div>
         </div>
     </section>
 </body>
