--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/9af645afab.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles/global.css">
@@ -67,8 +69,7 @@
         <div class="container">
             <img src="images/astronaut-riding-on-rocket.png" alt="astronaut-riding-on-rocket">
             <div>
-                <h1 class="section-title">About Me</h1>
-                <hr/>
+                <h1 class="section-title">About Me</h1><hr/>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
@@ -77,6 +78,39 @@
                     Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
                 </p>
                 <button class="linkedin-button">LINKEDIN <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills -->
+    <section class="skills" id="skills">
+        <div class="container">
+            <h1 class="section-title">Technical Skills</h1><hr/>
+            <div class="icon-container">
+                <div>
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="cplusplus-icon"><hr/>
+                    <p>C++</p>
+                </div>
+                <div>
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="python-icon"><hr/>
+                    <p>Python</p>
+                </div>
+                <div>
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="java-icon"><hr/>
+                    <p>Java</p>
+                </div>
+                <div>
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="html5-icon"><hr/>
+                    <p>HTML5</p>
+                </div>
+                <div>
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="css3-icon"><hr/>
+                    <p>CSS3</p>
+                </div>
+                <div>
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript-icon"><hr/>
+                    <p>JavaScript</p>
+                </div>
             </div>
         </div>
     </section>
