style: modify the style of the skills page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section class="skills" id="skills">
         <div class="container">
             <h1 class="section-title">Technical Skills</h1><hr/>
-            <div class="icon-container">
+            <div class="skill-icon-container">
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="cplusplus-icon"><hr/>
                     <p>C++</p>
