--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div>
                 <h6 class="name-tag">&#8212; Reshawn Lofters</h6>
-                <h1 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h1>
+                <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h1>
                 <h2 class="role-heading">I am a Software Developer</h2>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -69,7 +69,7 @@
         <div class="container">
             <img src="images/astronaut-riding-on-rocket.png" alt="astronaut-riding-on-rocket">
             <div>
-                <h1 class="section-title">About Me</h1><hr/>
+                <h1>About Me</h1><hr/>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
@@ -85,7 +85,7 @@
     <!-- Skills -->
     <section class="skills" id="skills">
         <div class="container">
-            <h1 class="section-title">Technical Skills</h1><hr/>
+            <h1>Technical Skills</h1><hr/>
             <div class="skill-icon-container">
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="cplusplus-icon"><hr/>
@@ -110,6 +110,76 @@
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript-icon"><hr/>
                     <p>JavaScript</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects -->
+    <section class="projects" id="projects">
+        <div class="container">
+            <h1>Projects</h1><hr/>
+            <div class="project-container">
+                <img src="images/project-1-image.avif" alt="project-1-image">
+                <div class="project-descr-container">
+                    <h3>Bug Tracker</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Iure magni fuga minima porro accusantium vero laudantium illum.
+                    </p><hr/>
+                    <div class="project-tech-container">
+                        <i class="devicon-html5-plain colored"></i>
+                        <i class="bi bi-dot"></i>
+                        <i class="devicon-css3-plain colored"></i>
+                        <i class="bi bi-dot"></i>
+                        <i class="devicon-javascript-plain colored"></i>
+                    </div>
+                    <div>
+                        <button class="view-live-button">VIEW LIVE</button>
+                        <button class="github-button">GITHUB <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <img src="images/project-1-image.avif" alt="project-2-image">
+                <div class="project-descr-container">
+                    <h3>Financial Portal</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Iure magni fuga minima porro accusantium vero laudantium illum.
+                    </p><hr/>
+                    <div class="project-tech-container">
+                        <i class="devicon-html5-plain colored"></i>
+                        <i class="bi bi-dot"></i>
+                        <i class="devicon-css3-plain colored"></i>
+                        <i class="bi bi-dot"></i>
+                        <i class="devicon-javascript-plain colored"></i>
+                    </div>
+                    <div>
+                        <button class="view-live-button">VIEW LIVE</button>
+                        <button class="github-button">GITHUB <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <img src="images/project-1-image.avif" alt="project-3-image">
+                <div class="project-descr-container">
+                    <h3>Personal Website</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Iure magni fuga minima porro accusantium vero laudantium illum.
+                    </p><hr/>
+                    <div class="project-tech-container">
+                        <i class="devicon-html5-plain colored"></i>
+                        <i class="bi bi-dot"></i>
+                        <i class="devicon-css3-plain colored"></i>
+                        <i class="bi bi-dot"></i>
+                        <i class="devicon-javascript-plain colored"></i>
+                    </div>
+                    <div>
+                        <button class="home-button">HOME</button>
+                        <button class="github-button">GITHUB <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                    </div>
                 </div>
             </div>
         </div>
