style: modify the style of the projects page

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="project-container">
                 <img src="images/project-1-image.avif" alt="project-2-image">
                 <div class="project-descr-container">
                     <h3>Financial Portal</h3>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="project-container">
                 <img src="images/project-1-image.avif" alt="project-3-image">
                 <div class="project-descr-container">
                     <h3>Personal Website</h3>
