build: create the structure of the contact page
Components:
- section title
- section subtitle
- contact form
- form submit button

--- a/index.html
+++ b/index.html
@@ -184,5 +184,45 @@
             </div>
         </div>
     </section>
+
+    <!-- Contact -->
+    <section class="contact" id="contact">
+        <div class="section-container">
+            <h1 class="section-title">Contact Me</h1><hr/>
+            <div class="contact-grid">
+                <img src="" alt="">
+                <div class="contact-form-container">
+                    <h3 class="section-subtitle">Get In Touch</h3>
+                    <form action="" class="contact-form" id="contactForm">
+                        <div class="name-email-row">
+                            <div class="input-group">
+                                <input type="text" name="Name" id="name" required>
+                                <label for="name">Name</label>
+                            </div>
+                            <div class="input-group">
+                                <input type="text" name="Email" id="email" required>
+                                <label for="email">Email</label>
+                            </div>
+                        </div>
+                        <div class="input-group">
+                            <input type="text" name="Subject" id="subject" required>
+                            <label for="subject">Subject</label>
+                        </div>
+                        <div class="input-group">
+                            <div class="form-textarea-container">
+                                <textarea name="Comment" id="comment" rows="7" required></textarea>
+                                <label for="comment">Comment</label>
+                                <div class="textarea-char-counter">
+                                    <span class="current-number">0</span>
+                                    <span class="limit-number">/1000</span>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="form-submit-button" type="submit">SUBMIT <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
