chore!: modify website page html and css styling
Modifications:
- class names are more descriptive
- unneccessary section containers are removed
- element css styling is more formatted

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
     <!-- Home -->
     <section class="home" id="home">
-        <div class="container">
+        <div class="section-container">
             <div>
                 <h6 class="name-tag">&#8212; Reshawn Lofters</h6>
-                <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h1>
+                <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
                 <h2 class="role-heading">I am a Software Developer</h2>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -66,10 +66,10 @@
 
     <!-- About -->
     <section class="about" id="about">
-        <div class="container">
+        <div class="section-container">
             <img src="images/astronaut-riding-on-rocket.png" alt="astronaut-riding-on-rocket">
             <div>
-                <h1>About Me</h1><hr/>
+                <h1 class="section-title">About Me</h1><hr/>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
@@ -84,32 +84,32 @@
 
     <!-- Skills -->
     <section class="skills" id="skills">
-        <div class="container">
-            <h1>Technical Skills</h1><hr/>
+        <div class="section-container">
+            <h1 class="section-title">Technical Skills</h1><hr/>
             <div class="skill-icon-container">
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="cplusplus-icon"><hr/>
-                    <p>C++</p>
+                    <label>C++</label>
                 </div>
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="python-icon"><hr/>
-                    <p>Python</p>
+                    <label>Python</label>
                 </div>
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="java-icon"><hr/>
-                    <p>Java</p>
+                    <label>Java</label>
                 </div>
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="html5-icon"><hr/>
-                    <p>HTML5</p>
+                    <label>HTML5</label>
                 </div>
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="css3-icon"><hr/>
-                    <p>CSS3</p>
+                    <label>CSS3</label>
                 </div>
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript-icon"><hr/>
-                    <p>JavaScript</p>
+                    <label>JavaScript</label>
                 </div>
             </div>
         </div>
@@ -117,12 +117,12 @@
 
     <!-- Projects -->
     <section class="projects" id="projects">
-        <div class="container">
-            <h1>Projects</h1><hr/>
+        <div class="section-container">
+            <h1 class="section-title">Projects</h1><hr/>
             <div class="project-container">
                 <img src="images/project-1-image.avif" alt="project-1-image">
                 <div class="project-descr-container">
-                    <h3>Bug Tracker</h3>
+                    <h3 class="project-title">Bug Tracker</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Iure magni fuga minima porro accusantium vero laudantium illum.
@@ -143,7 +143,7 @@
             <div class="project-container">
                 <img src="images/project-1-image.avif" alt="project-2-image">
                 <div class="project-descr-container">
-                    <h3>Financial Portal</h3>
+                    <h3 class="project-title">Financial Portal</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Iure magni fuga minima porro accusantium vero laudantium illum.
@@ -164,7 +164,7 @@
             <div class="project-container">
                 <img src="images/project-1-image.avif" alt="project-3-image">
                 <div class="project-descr-container">
-                    <h3>Personal Website</h3>
+                    <h3 class="project-title">Personal Website</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Iure magni fuga minima porro accusantium vero laudantium illum.
@@ -212,7 +212,7 @@
                             <div class="form-textarea-container">
                                 <textarea name="Comment" id="comment" rows="7" required></textarea>
                                 <label for="comment">Comment</label>
-                                <div class="textarea-char-counter">
+                                <div class="form-textarea-char-counter">
                                     <span class="current-number">0</span>
                                     <span class="limit-number">/1000</span>
                                 </div>
