style: modify the global css styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Header -->
     <header class="header" id="header">
         <nav>
-            <a href="#" class="nav-logo">
+            <a href="#home" class="nav-logo">
                 Reshawn<span>&#46;</span>
             </a>
             <div class="nav-menu" id="navMenu">
