style: modify the style of page sections

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                         </div>
                         <div class="input-group">
                             <div class="form-textarea-container">
-                                <textarea name="user-comment" id="comment" rows="7" required></textarea>
-                                <label for="comment">Comment</label>
+                                <textarea name="user-message" id="message" rows="7" required></textarea>
+                                <label for="message">Message</label>
                                 <div class="form-textarea-char-counter">
                                     <span class="current-number">0</span>
                                     <span class="limit-number">/1000</span>
