--- a/index.html
+++ b/index.html
@@ -227,5 +227,22 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <section class="footer">
+        <div class="section-container">
+            <div>
+                <h1 class="name-heading">
+                    Reshawn<span>&#46;</span>
+                </h1>
+                <h2 class="role-heading">
+                    Software Developer
+                </h2>
+            </div>
+            <div class="copyright-message">
+                Copyright &#169; 2023 Reshawn Lofters. All rights reserved.
+            </div>
+        </div>
+    </section>
 </body>
 </html>
