--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
                     Software Developer
                 </h2>
             </div>
-            <div class="copyright-message">
+            <span class="copyright-message">
                 Copyright &#169; 2023 Reshawn Lofters. All rights reserved.
-            </div>
+            </span>
         </div>
     </section>
 </body>
