--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/9af645afab.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script src="scripts/header.js" defer></script>
-    <script src="scripts/contact.js" defer></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/home.css">
@@ -240,9 +239,9 @@
                     Software Developer
                 </h2>
             </div>
-            <span class="copyright-message">
-                Copyright &#169; 2023 Reshawn Lofters. All rights reserved.
-            </span>
+            <p class="copyright-notice">
+                Copyright &copy; <span id="currentYear"></span> Reshawn Lofters. All rights reserved.
+            </p>
         </div>
     </section>
 </body>
