feat: make webpage buttons responsive

--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
                     Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
                 </p>
                 <div>
-                    <button class="contact-me-button">CONTACT ME</button>
-                    <button class="resume-button">RESUME <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                    <a href="#contact">
+                        <button class="contact-me-button">CONTACT ME</button>
+                    </a>
+                    <a href="images/Reshawn Lofters Resume.pdf" target="_blank" download>
+                        <button class="resume-button">RESUME <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                    </a>
                 </div>
             </div>
             <img src="images/astronaut-riding-on-rocket.png" alt="astronaut-riding-on-rocket">
@@ -79,7 +83,9 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
                 </p>
-                <button class="linkedin-button">LINKEDIN <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                <a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
+                    <button class="linkedin-button">LINKEDIN <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                </a>
             </div>
         </div>
     </section>
@@ -138,7 +144,7 @@
                     </div>
                     <div>
                         <button class="view-live-button">VIEW LIVE</button>
-                        <button class="github-button">GITHUB <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                        <button class="code-button"> CODE <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
                     </div>
                 </div>
             </div>
@@ -158,8 +164,12 @@
                         <i class="devicon-javascript-plain colored"></i>
                     </div>
                     <div>
-                        <button class="view-live-button">VIEW LIVE</button>
-                        <button class="github-button">GITHUB <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                        <a href="index.html">
+                            <button class="home-button">HOME</button>
+                        </a>
+                        <a href="https://github.com/reshawnlofters/personal-website" target="_blank">
+                            <button class="code-button">CODE <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                        </a>
                     </div>
                 </div>
             </div>
