--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
             </a>
             <div class="nav-menu" id="navMenu">
                 <!-- close toggle menu icon -->
-                <i class="fa-sharp fa-solid fa-xmark" onclick="hideMenu()"></i>
+                <i class="fa-sharp fa-solid fa-xmark" id="close-menu-icon" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#skills">SKILLS</a></li>
-                    <li><a href="#projects">PROJECTS</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
             <!-- open toggle menu icon -->
-            <i class="fa-sharp fa-solid fa-bars" onclick="showMenu()"></i>
+            <i class="fa-sharp fa-solid fa-bars" id="show-menu-icon" onclick="showMenu()"></i>
         </nav>
     </header>
 
