style! modify the style of webpages

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
                 <h2 class="role-heading">I am a Software Developer</h2>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
+                    I am a computer science student passionate about leveraging technology
+                    to promote innovation and solve complex buinesss problems.
                 </p>
                 <div>
                     <a href="#contact">
@@ -77,11 +77,9 @@
             <div>
                 <h1 class="section-title">About Me</h1><hr/>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
-                    Eligendi quam dolore repellendus ipsam.
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Laboriosam explicabo esse veniam nulla itaque id voluptates dolorum quaerat cumque?
+                    I am a first-year computer science student at Ontario Tech University.
+                    I am excited to explore new opportunities in software development where I can contribute to challenging projects,
+                    collaborate in dynamic team environments, and grow alongside other like-minded professionals.
                 </p>
                 <a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
                     <button class="linkedin-button">LINKEDIN <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
@@ -128,12 +126,12 @@
         <div class="section-container">
             <h1 class="section-title">Projects</h1><hr/>
             <div class="project-container">
-                <img src="images/project-1-image.avif" alt="project-1-image">
+                <img src="images/Project 1.jpg" alt="project-1-image">
                 <div class="project-descr-container">
                     <h3 class="project-title">Bug Tracker</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Iure magni fuga minima porro accusantium vero laudantium illum.
+                        Developed a bug tracker that allows you to create and assign
+                        project related tickets to multuple users within an organization. 
                     </p><hr/>
                     <div class="project-tech-container">
                         <i class="devicon-html5-plain colored"></i>
@@ -149,12 +147,12 @@
                 </div>
             </div>
             <div class="project-container">
-                <img src="images/project-1-image.avif" alt="project-2-image">
+                <img src="images/Project 2.jpg" alt="project-2-image">
                 <div class="project-descr-container">
                     <h3 class="project-title">Personal Website</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Iure magni fuga minima porro accusantium vero laudantium illum.
+                        Developed a personal portfolio website to display personal
+                        projects and illustrate personal attributes.
                     </p><hr/>
                     <div class="project-tech-container">
                         <i class="devicon-html5-plain colored"></i>
@@ -180,38 +178,35 @@
     <section class="contact" id="contact">
         <div class="section-container">
             <h1 class="section-title">Contact Me</h1><hr/>
-            <div class="contact-grid">
-                <img src="" alt="">
-                <div class="contact-form-container">
-                    <form action="" class="contact-form" id="contactForm">
-                        <div class="name-email-row">
-                            <div class="input-group">
-                                <input type="text" name="user-name" id="name" required>
-                                <label for="name">Name</label>
-                            </div>
-                            <div class="input-group">
-                                <input type="text" name="user-email" id="email" required>
-                                <label for="email">Email</label>
-                            </div>
+            <div class="contact-form-container">
+                <form action="" class="contact-form" id="contactForm">
+                    <div class="name-email-row">
+                        <div class="input-group">
+                            <input type="text" name="user-name" id="name" required>
+                            <label for="name">Name</label>
                         </div>
                         <div class="input-group">
-                            <input type="text" name="user-subject" id="subject" required>
-                            <label for="subject">Subject</label>
+                            <input type="text" name="user-email" id="email" required>
+                            <label for="email">Email</label>
                         </div>
-                        <div class="input-group">
-                            <div class="form-textarea-container">
-                                <textarea name="user-message" id="message" rows="7" required></textarea>
-                                <label for="message">Message</label>
-                                <div class="form-textarea-char-counter">
-                                    <span class="current-number">0</span>
-                                    <span class="limit-number">/1000</span>
-                                </div>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" name="user-subject" id="subject" required>
+                        <label for="subject">Subject</label>
+                    </div>
+                    <div class="input-group">
+                        <div class="form-textarea-container">
+                            <textarea name="user-message" id="message" rows="7" required></textarea>
+                            <label for="message">Message</label>
+                            <div class="form-textarea-char-counter">
+                                <span class="current-number">0</span>
+                                <span class="limit-number">/1000</span>
                             </div>
                         </div>
-                        <p class="form-submit-message" id="formSubmitMessage"></p>
-                        <button class="form-submit-button" type="submit">SUBMIT <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
-                    </form>
-                </div>
+                    </div>
+                    <p class="form-submit-message" id="formSubmitMessage"></p>
+                    <button class="form-submit-button" type="submit">SUBMIT <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                </form>
             </div>
         </div>
     </section>
