feat: create role heading typing effect

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/query.css">
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 </head>
 </body>
     <!-- Header -->
@@ -52,7 +53,7 @@
             <div>
                 <h6 class="name-tag">&#8212; Reshawn Lofters</h6>
                 <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
-                <h2 class="role-heading">I am a Software Developer</h2>
+                <h2 class="role-heading">I am a Software <span class="text auto-type">Developer</span></h2>
                 <p>
                     I am a computer science student passionate about leveraging technology
                     to promote innovation and solve complex buinesss problems.
