chore!: modify webpage responsiveness

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/9af645afab.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/header.css">
@@ -22,7 +23,6 @@
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/query.css">
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 </head>
 </body>
     <!-- Header -->
@@ -53,7 +53,7 @@
             <div>
                 <h6 class="name-tag">&#8212; Reshawn Lofters</h6>
                 <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
-                <h2 class="role-heading">I am a Software <span class="text auto-type">Developer</span></h2>
+                <h2 class="role-heading">I am a Software <br><span class="auto-type">Developer</span></h2>
                 <p>
                     I am a computer science student passionate about leveraging technology
                     to promote innovation and solve complex buinesss problems.
@@ -78,8 +78,8 @@
             <div>
                 <h1 class="section-title">About Me</h1><hr/>
                 <p>
-                    I am a first-year computer science student at Ontario Tech University.
-                    I am excited to explore new opportunities in software development where I can contribute to challenging projects,
+                    I am a second-year computer science student at Ontario Tech University.
+                    I am excited to explore new opportunities in software development to apply my skills and knowledge to challenging projects,
                     collaborate in dynamic team environments, and grow alongside other like-minded professionals.
                 </p>
                 <a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
